# TM-cli

./: CMakeLists.txt  HOW_TO.md  LICENSE  Program.tm  README.md
headers/: file_io.h  hashtable.h  lexer.h  list.h  set.h  token.h  utils.h
headers/engine/: environment.h  turing_engine.h
headers/parser/: expression.h  parser.h
sources/: environment.c  expression.c  file_io.c  hashtable.c  lexer.c  list.c  main.c  parser.c  set.c  token.c  turing_engine.c  utils.c
